# audio-bridge

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile.bridge  Dockerfile.cross  Dockerfile.server  LICENSE  Makefile  NOTICE  README.md  dist-workspace.toml  docker-compose.isolated.yml  docker-compose.yml
.github/workflows/: ci.yml  docker-image.yml  release.yml  tauri-release.yml
crates/audio-bridge-proto/: Cargo.toml
crates/audio-bridge-proto/src/: lib.rs
crates/audio-bridge-types/: Cargo.toml
crates/audio-bridge-types/src/: lib.rs
crates/audio-hub-server/: Cargo.toml  build.rs  config.docker-isolated.toml  config.example.toml
crates/audio-hub-server/proto/: cast_channel.proto
crates/audio-hub-server/src/: api.rs  bridge.rs  bridge_device_streams.rs  bridge_manager.rs  bridge_transport.rs  browser.rs  cast_v2.rs  config.rs  cover_art.rs  discovery.rs  events.rs  library.rs  local_playback_sessions.rs  local_player.rs  main.rs  media_assets.rs  metadata_db.rs  metadata_service.rs  models.rs  musicbrainz.rs  openapi.rs  output_controller.rs  playback_manager.rs  playback_transport.rs  queue_playback.rs  queue_service.rs  session_playback_manager.rs  session_registry.rs  startup.rs  state.rs  status_store.rs  stream_url.rs  tag_writer.rs  track_analysis.rs
crates/audio-hub-server/src/api/: browser.rs  health.rs  library.rs  local_playback.rs  logs.rs  metadata.rs  mod.rs  outputs.rs  playback.rs  queue.rs  sessions.rs  streams.rs
crates/audio-hub-server/src/output_providers/: bridge_provider.rs  browser_provider.rs  cast_provider.rs  local_provider.rs  mod.rs  registry.rs
crates/audio-player/: Cargo.toml
crates/audio-player/src/: config.rs  decode.rs  device.rs  lib.rs  playback.rs  queue.rs  resample.rs  status.rs
crates/audio-player/src/pipeline/: mod.rs
crates/audio-send/: Cargo.toml
crates/audio-send/src/: library.rs  main.rs  server_api.rs  ui.rs  worker.rs
crates/audio-send/src/ui/: app.rs  mod.rs  render.rs
crates/audio-server/: Cargo.toml  config.example.toml
crates/audio-server/src/: api.rs  bridge.rs  config.rs  library.rs  main.rs  models.rs  openapi.rs  state.rs
crates/bridge/: Cargo.toml  build.rs
crates/bridge/src/: cli.rs  config.rs  decode.rs  device.rs  dummy_output.rs  exclusive.rs  http_api.rs  http_stream.rs  lib.rs  main.rs  mdns.rs  playback.rs  player.rs  queue.rs  resample.rs  runtime.rs  status.rs
crates/bridge/src/net/: mod.rs  session.rs  spool.rs
crates/bridge/src/pipeline/: mod.rs  progress.rs
crates/hub-cli/: Cargo.toml
crates/hub-cli/src/: library.rs  main.rs  server_api.rs  worker.rs
crates/hub-cli/src/ui/: app.rs  layout.rs  mod.rs  render.rs  view_model.rs  widgets.rs
cross/: Dockerfile.aarch64  Dockerfile.x86_64
docs/: architecture.md
scripts/: docker-entrypoint.sh  gen-audio-fixture.sh  gen-audio-fixtures-from-yaml.sh  gen-audio-fixtures-yaml-from-album.sh  gen-dev-cert-mkcert.sh
src/: cli.rs  decode.rs  device.rs  main.rs  net.rs  pipeline.rs  playback.rs  queue.rs  resample.rs
src/net/: mod.rs  session.rs  spool.rs
web-ui/: .env  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
web-ui/.storybook/: main.ts  preview.ts
web-ui/public/: runtime-config.js
web-ui/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts  vite-env.d.ts
web-ui/src-tauri/: Cargo.toml  tauri.conf.json
web-ui/src-tauri/icons/: icon.icns
web-ui/src/components/: AlbumDetailView.tsx  AlbumMetadataDialog.tsx  AlbumMetadataModal.tsx  AlbumNotesModal.tsx  AlbumsView.tsx  AppChrome.tsx  AppModals.tsx  CatalogMetadataDialog.tsx  ConnectionGate.tsx  CreateSessionModal.tsx  FoldersView.tsx  LibraryList.tsx  LibraryView.tsx  MainContent.tsx  MobileTabBar.tsx  Modal.tsx  MusicBrainzMatchModal.tsx  NotificationsPanel.tsx  NowPlayingScreen.tsx  OutputsModal.tsx  PlayerBar.tsx  PlayerControls.tsx  QueueList.tsx  QueueModal.tsx  QueueScreen.tsx  SessionsScreen.tsx  SettingsView.tsx  SideNav.tsx  SignalModal.tsx  TrackAnalysisModal.tsx  TrackMenu.tsx  TrackMetadataModal.tsx  ViewHeader.tsx
web-ui/src/hooks/: streams.ts  useActivityEvents.ts  useAlbumMetadataTargets.ts  useAlbumModalActions.ts  useAlbumViewState.ts  useAlbumsState.ts  useAppChromeActions.ts  useAppUiState.ts  useCompactLayout.ts  useHubConnection.ts  useLocalPlayback.ts  useMainContentActions.ts  useMediaSessionControls.ts  useNowPlayingCover.ts  useOutputSettings.ts  usePlaybackActions.ts  usePlaybackCommands.ts  usePlaybackDerivedState.ts  useQueueActions.ts  useSessionContext.ts  useSessionOutputSelection.ts  useSessionStreams.ts  useSessionUiActions.ts  useSessionVolumeControl.ts  useSessionsState.ts  useToasts.ts  useTrackMenu.ts  useUiShellEffects.ts  useViewNavigation.ts
web-ui/src/stories/: AlbumDetailView.story.tsx  AlbumsView.story.tsx  CreateSessionModal.story.tsx  NotificationsPanel.story.tsx  OutputsModal.story.tsx  PlayerBar.story.tsx  QueueModal.story.tsx  SettingsView.story.tsx  SideNav.story.tsx  SignalModal.story.tsx  ViewHeader.story.tsx
web-ui/src/styles/: albums.css  base.css  colors.css  layout.css  library.css  modal.css  outputs-queue.css  player.css  responsive.css  settings.css  signal.css  ui.css
web-ui/src/utils/: session.ts  viewFormatters.ts
web-ui/tests/e2e/: connection-gate.spec.ts  docker-e2e.ts  global-setup.ts  global-teardown.ts  library-browse.spec.ts  server-smoke.spec.ts
web-ui/tests/fixtures/: album-fixtures.yml  e2e.server.toml
