[package]
name = "audio-bridge"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/audio-bridge-proto",
    "crates/audio-send",
]

[dependencies]
anyhow = "1.0.100"
audioadapter-buffers = "2.0.0"
clap = { version = "4.5.56", features = ["derive"] }
cpal = "0.17.1"
rubato = "1.0.1"
symphonia = { version = "0.5.5", features = ["flac"] }
audio-bridge-proto = { path = "crates/audio-bridge-proto" }