[workspace]
members = [
    "crates/bridge",
    "crates/audio-bridge-types",
    "crates/hub-cli",
    "crates/audio-hub-server",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
audioadapter-buffers = "2.0.0"
clap = { version = "4.5.56", features = ["derive"] }
cpal = "0.17.1"
ctrlc = "3.4.5"
crossbeam-channel = "0.5.15"
rubato = "1.0.1"
symphonia = { version = "0.5.5", features = ["flac", "mp3", "aac", "alac", "wav", "aiff", "vorbis"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
