[package]
name = "audio-hub-server"
version = "0.5.0"
edition = "2024"
build = "build.rs"
repository = "https://github.com/dariusbakunas/audio-bridge.git"

[dependencies]
actix-web = "4.11.0"
anyhow = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
symphonia = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ctrlc = { workspace = true }
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
toml = "0.9.11+spec-1.1.0"
ureq = { version = "3.1.4", features = ["json"] }
mdns-sd = "0.17.2"
tokio = { version = "1.43.0", features = ["fs", "io-util"] }
tokio-util = "0.7.12"
urlencoding = "2.1.3"
futures-util = "0.3.30"
async-trait = "0.1.86"
audio-bridge-types = { path = "../audio-bridge-types", features = ["openapi"] }
audio-player = { path = "../audio-player" }
cpal = { workspace = true }

[build-dependencies]
time = { version = "0.3", features = ["formatting"] }
