[package]
name = "audio-hub-server"
version = "0.9.0"
edition = "2024"
build = "build.rs"
repository = "https://github.com/dariusbakunas/audio-bridge.git"

[dependencies]
actix-web = { version = "4.11.0", features = ["rustls-0_22"] }
actix-files = "0.6.6"
actix-cors = "0.7.1"
actix = "0.13.5"
actix-web-actors = "4.3.0"
anyhow = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
symphonia = { workspace = true }
lofty = "0.18.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ctrlc = { workspace = true }
notify = "6.1.1"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
rustls = "0.22.4"
rustls-pemfile = "2.1.3"
toml = "0.9.11+spec-1.1.0"
ureq = { version = "3.1.4", features = ["json"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
mdns-sd = "0.17.2"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio = { version = "1.43.0", features = ["fs", "io-util", "macros", "process", "time"] }
tokio-util = "0.7.12"
urlencoding = "2.1.3"
futures-util = "0.3.30"
async-trait = "0.1.86"
audio-bridge-types = { path = "../audio-bridge-types", features = ["openapi"] }
audio-player = { path = "../audio-player" }
cpal = { workspace = true }

[build-dependencies]
time = { version = "0.3", features = ["formatting"] }
