[package]
name = "audio-send"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
audio-bridge-proto = { path = "../audio-bridge-proto" }
crossbeam-channel = "0.5.15"
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
ureq = { version = "2.12.1", features = ["json"] }
urlencoding = "2.1.3"
