[package]
name = "audio-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.100"
audio-bridge-proto = { path = "../audio-bridge-proto" }
clap = { version = "4.5.56", features = ["derive"] }
crossbeam-channel = "0.5.15"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
symphonia = { version = "0.5.5", features = ["flac"] }
