[package]
name = "bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
audioadapter-buffers = { workspace = true }
clap = { workspace = true }
cpal = { workspace = true }
rubato = { workspace = true }
symphonia = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true }
audio-bridge-proto = { path = "../audio-bridge-proto" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tiny_http = "0.12.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
