[package]
name = "bridge"
version = "0.14.1"
edition = "2024"
license = "GPL-3.0-only"
build = "build.rs"
repository = "https://github.com/dariusbakunas/audio-bridge.git"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
cpal = { workspace = true }
symphonia = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
actix-web = "4.9.0"
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
mdns-sd = "0.17.2"
gethostname = "1.1.0"
ureq = { version = "3.1.4", features = ["json", "platform-verifier"] }
audio-bridge-types = { path = "../audio-bridge-types" }
audio-player = { path = "../audio-player" }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.13.0"
objc2-core-audio = "0.3.2"

[build-dependencies]
time = { version = "0.3", features = ["formatting"] }
