[package]
name = "hub-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
audio-bridge-proto = { path = "../audio-bridge-proto" }
crossbeam-channel = { workspace = true }
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
ureq = { version = "2.12.1", features = ["json"] }
urlencoding = "2.1.3"
