[package]
name = "hub-cli"
version = "0.1.1"
edition = "2024"
build = "build.rs"
repository = "https://github.com/dariusbakunas/audio-bridge.git"

[dependencies]
anyhow = { workspace = true }
bridge = { path = "../bridge" }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ureq = { version = "3.1.4", features = ["json"] }
urlencoding = "2.1.3"

[build-dependencies]
time = { version = "0.3", features = ["formatting"] }
