[package]
name = "audio-hub-desktop"
version = "0.1.0"
description = "Audio Hub desktop client"
authors = ["Audio Hub"]
edition = "2021"
license = "GPL-3.0-only"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }

[workspace]
